--- a/.github/workflows/total-split.yml
+++ b/.github/workflows/total-split.yml
@@ -59,7 +59,7 @@ jobs:
         run: hugo --config "configs/total.toml","config.json" -c "content/total" -b "https://products-qa.aspose.com/total" --cleanDestinationDir --minify
           --templateMetrics --templateMetricsHints
       - name: Prepare public folder
-        run: find /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/public type f -exec mv sitemap.xml ${{ matrix.configure_one_product }}.xml \;
+        run: find /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/public -iname 'sitemap.xml' -execdir mv -i '{}' ${{ matrix.configure_one_product }}.xml \;=
         
       - name: Deploy Total to S3
         run: hugo deploy --config "configs/total.toml" --maxDeletes=0 --target "staging"
