Added android-java folder

--- a/.github/workflows/staging-total-split.yml
+++ b/.github/workflows/staging-total-split.yml
@@ -24,6 +24,7 @@ jobs:
           - java
           - net
           - cpp
+          - android-java
 
     steps:
       - name: Checkout theme repo
