added reporting-services folder

--- a/.github/workflows/staging-total-split.yml
+++ b/.github/workflows/staging-total-split.yml
@@ -25,6 +25,7 @@ jobs:
           - net
           - cpp
           - android-java
+          - reporting-services
 
     steps:
       - name: Checkout theme repo
