--- a/.github/workflows/staging-total-split.yml
+++ b/.github/workflows/staging-total-split.yml
@@ -2,7 +2,7 @@ name: Total-Staging-Split
 on:
   workflow_dispatch:
   repository_dispatch:
-    types: [staging-complete, Total-Staging-Split]
+    types: [staging-complete, dispatch-receiver]
   
 jobs:
   deploy:
