--- a/.github/workflows/production-cad.yml
+++ b/.github/workflows/production-cad.yml
@@ -1,6 +1,9 @@
 name: CAD-Production
 
 on:
+  push:
+    branches:
+      - master
   repository_dispatch:
     types: [production-complete]
   workflow_dispatch:
