--- a/.github/workflows/staging-home.yml
+++ b/.github/workflows/staging-home.yml
@@ -46,6 +46,9 @@ jobs:
     - name: Build Home
       run: hugo --config "configs/home.toml" -b "https://products-qa.aspose.com" --cleanDestinationDir --minify
 
+    - name: Prepare public folder
+      run: mv /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/home-ru.sitemap public/sitemap_ru.xml;
+
     - name: Deploy Home to S3
       run: hugo deploy --config "configs/home.toml" --maxDeletes=0 --target "staging" --force
       env:
