--- a/.github/workflows/production-home.yml
+++ b/.github/workflows/production-home.yml
@@ -38,6 +38,8 @@ jobs:
         include: "_index.md"
     - name: Build Home
       run: hugo --config "configs/home.toml" -c "content" -b "https://products.aspose.com/" --cleanDestinationDir --minify --disableKinds 404
+    - name: Prepare public folder
+      run: mv /home/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/home-ru.sitemap public/ru-sitemaps.xml;
     - name: Deploy Home to S3
       run: hugo deploy --config "configs/home.toml" --maxDeletes=0 --target "production" --force
       env:
