--- a/.github/workflows/staging-total-split.yml
+++ b/.github/workflows/staging-total-split.yml
@@ -26,6 +26,7 @@ jobs:
           - cpp
           - android-java
           - reporting-services
+          - nodejs-java
 
     steps:
       - name: Checkout theme repo
