--- a/.github/workflows/production-3d.yml
+++ b/.github/workflows/production-3d.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-          hugo-version: '0.110.0'
+          hugo-version: 'latest'
           extended: true
     - name: Install autoprefixer
       run:  npm install -D --save autoprefixer
