--- a/.github/workflows/staging-total-split.yml
+++ b/.github/workflows/staging-total-split.yml
@@ -27,6 +27,7 @@ jobs:
           - android-java
           - reporting-services
           - nodejs-java
+          - php-java
 
     steps:
       - name: Checkout theme repo
