--- a/.github/workflows/staging-medical.yml
+++ b/.github/workflows/staging-medical.yml
@@ -18,30 +18,12 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-          hugo-version: 'latest'
+          hugo-version: '0.110.0'
           extended: true
     - name: Install autoprefixer
       run:  npm install -D --save autoprefixer
     - name: Install postcss-cli
       run:  npm install -D --save postcss-cli
-    - name: Find and replace url param in frontmatter
-      uses: jacobtomlinson/gha-find-replace@v2
-      with:
-        find: "url:"
-        replace: "url_ignore:"
-        include: "_index.md"
-    - name: Find and replace domain name
-      uses: jacobtomlinson/gha-find-replace@v2
-      with:
-        find: "products.aspose.com"
-        replace: "products-qa.aspose.com"
-        include: "_index.md"
-    - name: Find and replace image url domain
-      uses: jacobtomlinson/gha-find-replace@v2
-      with:
-        find: "logoImageSrc=\"https://www.aspose.cloud/"
-        replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
-        include: "_index.md"
     - name: Build Medical
       run: hugo --config "configs/medical.toml" -c "content/medical" -b "https://products-qa.aspose.com/medical" --cleanDestinationDir --minify
     - name: Deploy Medical to S3
