Added branch andrey.m.DRAWINGJAVA-114, set hugo version 0.117.0

--- a/.github/workflows/staging-drawing.yml
+++ b/.github/workflows/staging-drawing.yml
@@ -14,11 +14,12 @@ jobs:
       with:
           repository: Aspose/products.aspose.com
           token: ${{ secrets.REPO_TOKEN }}
-          fetch-depth: 0 
+          fetch-depth: 0
+          ref: andrey.m.DRAWINGJAVA-114
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-          hugo-version: 'latest'
+          hugo-version: '0.117.0'
           extended: true
     - name: Install autoprefixer
       run:  npm install -D --save autoprefixer
