--- a/.github/workflows/production-drawing.yml
+++ b/.github/workflows/production-drawing.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-          hugo-version: 'latest'
+          hugo-version: '0.117.0'
           extended: true
     - name: Install autoprefixer
       run:  npm install -D --save autoprefixer
