--- a/.github/workflows/staging-imaging-custom.yml
+++ b/.github/workflows/staging-imaging-custom.yml
@@ -13,7 +13,7 @@ jobs:
       with:
           repository: Aspose/products.aspose.com
           token: ${{ secrets.REPO_TOKEN }}
-          ref: samer.el-khatib.IMAGINGNET-5114_3
+          ref: samer.el-khatib.IMAGINGNET-7074_with_content
           fetch-depth: 0 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
