added  nodejs-net landing page
added  nodejs-net landing page

--- a/.github/workflows/staging-total-split.yml
+++ b/.github/workflows/staging-total-split.yml
@@ -29,7 +29,8 @@ jobs:
           - nodejs-java
           - php-java
           - javascript-cpp
-          - nodejs-cpp          
+          - nodejs-cpp
+          - nodejs-net
 
     steps:
       - name: Checkout theme repo
