--- a/.github/workflows/staging-imaging.yml
+++ b/.github/workflows/staging-imaging.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
     - name: Checkout theme repo
       uses: actions/checkout@main
@@ -15,6 +15,7 @@ jobs:
           repository: Aspose/products.aspose.com
           token: ${{ secrets.REPO_TOKEN }}
           fetch-depth: 0
+          ref: andrey.m.IMAGINGNET-7119
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
