--- a/.github/workflows/production-imaging.yml
+++ b/.github/workflows/production-imaging.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
     - name: Checkout theme repo
       uses: actions/checkout@main
