--- a/.github/workflows/staging-drawing.yml
+++ b/.github/workflows/staging-drawing.yml
@@ -15,7 +15,7 @@ jobs:
           repository: Aspose/products.aspose.com
           token: ${{ secrets.REPO_TOKEN }}
           fetch-depth: 0
-          ref: andrey.m.IMAGINGNET-1511
+          ref: andrey.m.DRAWINGNET-1511
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
