--- a/.github/workflows/production-cells-split.yml
+++ b/.github/workflows/production-cells-split.yml
@@ -6,7 +6,7 @@ on:
   
 jobs:
   deploy:
-    runs-on: macos-latest
+    runs-on: macos-13
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
