--- a/.github/workflows/production-cells-split.yml
+++ b/.github/workflows/production-cells-split.yml
@@ -28,6 +28,7 @@ jobs:
           - android-java
           - reporting-services
           - nodejs-java
+          - nodejs-cpp
 
     steps:
       - name: Checkout theme repo
