Modify AWS endpoint and add sanity check step
Updated the AWS endpoint URL and added a sanity check step.

--- a/.github/workflows/production-total-split.yml
+++ b/.github/workflows/production-total-split.yml
@@ -11,7 +11,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.CEPH_PROD_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.CEPH_PROD_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.CEPH_DEFAULT_REGION }}
-      AWS_ENDPOINT_URL: ${{ secrets.CEPH_PROD_ENDPOINT_URL }}
+      AWS_ENDPOINT_URL: ${{ secrets.CEPH_PROD_ENDPOINT_URL_FRONT }}
     continue-on-error: true
     strategy:
       fail-fast: false
@@ -75,3 +75,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.CEPH_PROD_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.CEPH_PROD_SECRET_ACCESS_KEY }}
+      - name: Sanity check endpoint value
+        run: |
+          echo "Endpoint: $AWS_ENDPOINT_URL"
+
