--- a/.github/workflows/production-total-split.yml
+++ b/.github/workflows/production-total-split.yml
@@ -12,7 +12,6 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.CEPH_PROD_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.CEPH_DEFAULT_REGION }}
       AWS_ENDPOINT_URL: ${{ secrets.CEPH_PROD_ENDPOINT_URL_FRONT }}
-    continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
@@ -62,20 +61,18 @@ jobs:
         run: npm run configure
       - name: Display config.json
         run: cat /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/config.json
+      - name: Sanity check endpoint value
+        run: echo "Endpoint: $AWS_ENDPOINT_URL"
       - name: Build Total
         run: hugo --config "configs/total.toml","config.json" -c "content/total" -b "https://products.aspose.com/total" --cleanDestinationDir --minify
           --templateMetrics --templateMetricsHints --enableGitInfo
       - name: Prepare public folder
         run: |
-            find /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/public -iname 'sitemap.xml' -execdir mv -i '{}' ${{ matrix.configure_one_product }}.xml \;=
+            find /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/public -iname 'sitemap.xml' -execdir mv -i '{}' ${{ matrix.configure_one_product }}.xml \;
             mv /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/total.sitemap public/sitemap.xml;
             mv /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/total.rss public/index.xml;
       - name: Deploy Total to S3
-        run: hugo deploy --config "configs/total.toml" --maxDeletes=0 --target "production"
+        run: hugo deploy --config "configs/total.toml","config.json" --maxDeletes=0 --target "production"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.CEPH_PROD_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.CEPH_PROD_SECRET_ACCESS_KEY }}
-      - name: Sanity check endpoint value
-        run: |
-          echo "Endpoint: $AWS_ENDPOINT_URL"
-
