--- a/.github/workflows/production-total-split.yml
+++ b/.github/workflows/production-total-split.yml
@@ -72,8 +72,15 @@ jobs:
             find /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/public -iname 'sitemap.xml' -execdir mv -i '{}' ${{ matrix.configure_one_product }}.xml \;
             mv /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/total.sitemap public/sitemap.xml;
             mv /Users/runner/work/products.aspose.com-workflows/products.aspose.com-workflows/total.rss public/index.xml;
-      - name: Deploy Total to S3
-        run: hugo deploy --config "configs/total.toml","config.json" --maxDeletes=0 --target "production"
+      - name: Deploy to Ceph via aws s3 sync
         env:
+          AWS_EC2_METADATA_DISABLED: "true"
           AWS_ACCESS_KEY_ID: ${{ secrets.CEPH_PROD_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.CEPH_PROD_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.CEPH_DEFAULT_REGION }}
+          AWS_ENDPOINT_URL: ${{ secrets.CEPH_PROD_ENDPOINT_URL_FRONT }}
+        run: |
+          aws s3 sync ./public/ s3://products.aspose.com/ \
+            --endpoint-url "$AWS_ENDPOINT_URL" \
+            --delete
+
